@@ -1158,3 +1158,4 @@ Peers.column.UpDownRatio=Up:Down
 Peers.column.UpDownRatio.info=Peer's "Uploaded : Downloaded" Ratio
 Peers.column.UpRatio=Up Ratio
 Peers.column.UpRatio.info=Peer's "Upload from you : Uploaded from other" ratio
+upnp.releasemappings=Release mappings on closedown
