@@ -10,6 +10,8 @@ FEATURE: Dev  | More features for torrent creation [Parg]
 FEATURE: Plug | Experimental data upload facility for tracker web pages [Parg]
 FEATURE: Plug | WebUI support for "host" operation [Parg]
 FEATURE: UI   | New peer columns to help track leechers [TuxPaper]
+FEATURE: Plug | Run the web interface standalone (outside of a browser) [Parg]
+FEATURE: Plug | Option to keep hold of UPnP port mappings when closing Azureus [Parg]
 
 CHANGE: Core | More sensible merging of plugin.properties on plugin update [Parg]
 CHANGE: Core | More "polite" hash checking...doesn't stress the cpu/system as much [Nolar]
